Fixed preview overflow

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -123,6 +123,7 @@
 }
 
 .searchBarForm {
+    position: relative;
     flex: 1;
     height: 100%;
     display: flex;
@@ -152,7 +153,6 @@
 
 .previewDivider {
     margin: 0;
-    height: 10px;
     background-color: white;
 }
 
